storage/xtradb/fil/fil0crypt.cc
@@ -1976,11 +1976,6 @@ fil_crypt_rotate_page(
 					kv, key_state->key_version,
 					key_state->rotate_key_age)) {
 
-				/* page can be "fresh" i.e never written in case
-				* kv == 0 or it should have a key version at least
-				* as big as the space minimum key version*/
-				ut_a(kv == 0 || kv >= crypt_data->min_key_version);
-
 				modified = true;
 
 				/* force rotation by dummy updating page */
@@ -1992,9 +1987,6 @@ fil_crypt_rotate_page(
 				state->crypt_stat.pages_modified++;
 			} else {
 				if (crypt_data->is_encrypted()) {
-					ut_a(kv >= crypt_data->min_key_version ||
-						(kv == 0 && key_state->key_version == 0));
-
 					if (kv < state->min_key_version_found) {
 						state->min_key_version_found = kv;
 					}
